Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Case__c/Selenium_Test_Case__c.object-meta.xml
<CustomObject>
    <label>Selenium Test Case</label>
    <nameField>
        <label>Selenium Test Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selenium Test Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>