Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Case__c/fields/Open_with_Copado_Recorder__c.field-meta.xml
<CustomField>
    <fullName>Open_with_Copado_Recorder__c</fullName>
    <description>Open with Copado Recorder</description>
    <formula>HYPERLINK(&quot;copado:selenese/&quot;&amp;Id, &quot;Open&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Open with Copado Recorder</inlineHelpText>
    <label>Open with Copado Recorder</label>
    <type>Text</type>
</CustomField>