Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Case__c/fields/Previous_Version__c.field-meta.xml
<CustomField>
    <fullName>Previous_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Version</label>
    <referenceTo>Selenium_Test_Case__c</referenceTo>
    <relationshipLabel>Next Version</relationshipLabel>
    <relationshipName>Selenium_Test_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>