Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Case__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <defaultValue>&quot;1&quot;</defaultValue>
    <label>Version</label>
    <length>6</length>
    <type>Text</type>
</CustomField>